logs/Slang/chapter-8/8.26.6.3--diamond_relationship.sv.log
name: diamond_relationship
description: interface class inherited from multiple sources shouldn't create symbol conflicts
should_fail: 0
tags: 8.26.6.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.6.3--diamond_relationship.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.6.3--diamond_relationship.sv:8:2: error: language feature not yet supported
	interface class ibase;
	^~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.6.3--diamond_relationship.sv:12:2: error: language feature not yet supported
	interface class ic1 extends ibase;
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.6.3--diamond_relationship.sv:16:2: error: language feature not yet supported
	interface class ic2 extends ibase;
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.6.3--diamond_relationship.sv:20:2: error: language feature not yet supported
	interface class ic3 extends ic1, ic2;
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
